nexus-collections/tests/ui/cannot_call_list_in_write.stderr
error[E0502]: cannot borrow `list` as immutable because it is also borrowed as mutable
  --> tests/ui/cannot_call_list_in_write.rs:15:27
   |
15 |     list.write(&mut slot, |_data| {
   |     ---- -----            ^^^^^^^ immutable borrow occurs here
   |     |    |
   |     |    mutable borrow later used by call
   |     mutable borrow occurs here
16 |         // ERROR: cannot borrow `list` as immutable because it is also borrowed as mutable
17 |         let _ = list.len();
   |                 ---- second borrow occurs due to use of `list` in closure
